2011-04-04  Keith Kyzivat  <keith.kyzivat@nokia.com>

Reviewed by Csaba Osztrogonác.

        [Qt] DumpRenderTree breaks compilation in some uClibc environments
        https://bugs.webkit.org/show_bug.cgi?id=57602

        * DumpRenderTree/qt/main.cpp:
        (get_backtrace):

Canonical link: https://commits.webkit.org/72629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82844 268f45cc-cd09-0410-ab3c-d52691b4dbfc